# aihouse-automation

./: .env.example  .eslintrc.cjs  .gitignore  .prettierrc  LICENSE  Makefile  README.jp.md  README.md  asset-manifest.json  docker-compose.yaml  index.html  package-lock.json  package.json  service-worker.js  service-worker.js.map  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: client_ci.yml  deploy.yml  server_cicd.yml
backend/: .env.example  Makefile  README.md  pyproject.toml
backend/api/: config.py  main.py
backend/handler/: reservation_handler.py
backend/tests/: conftest.py  test_users.py
frontend/: .env.example  .eslintrc.js  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/__mocks__/: appRouterContextProviderMock.tsx
frontend/__tests__/: GoogleForm.test.tsx
frontend/public/: manifest.json  sw.js  sw.js.map  workbox-8f0e986c.js
public/: index.html
server/: .env.example  .flake8  Makefile  README.md  pyproject.toml  serverless.yml
server/api/: config.py  main.py
server/api/core/: __init__.py
server/api/models/: db.py
server/api/repos/: reservation.py  user.py
server/api/routes/: user.py
server/api/schemas/: user.py
server/api/security/: dependencies.py
server/app/: main.py
server/app/auth/: json_web_token.py
server/app/core/: __init__.py  config.py
server/scripts/: reservation_handler.py  test.py
server/src/: main.py
src/: .env.example  App.js  App.tsx  form.json  index.css
src/api/: reservation.ts
src/components/: Calendar.tsx  (+7 more)
(+85 files in other folders)
