[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["chanon-mike <zzmikezz8520@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.18"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
fastapi = "^0.100.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
sqlalchemy-stubs = "^0.4"
flake8 = "^6.0.0"
autoflake = "^2.2.0"
isort = "^5.12.0"
black = "^23.3.0"

[tool.poetry.scripts]
start = "app.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 88