[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["chanon-mike <zzmikezz8520@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
uvicorn = "^0.22.0"
fastapi = {extras = ["all"], version = "^0.100.0"}
auth0-python = "^4.3.0"
python-jose = {extras = ["crytography"], version = "^3.3.0"}
pydantic-settings = "^2.0.1"
mangum = "^0.17.0"
pynamodb = "^5.5.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
autoflake = "^2.2.0"
isort = "^5.12.0"
black = "^23.3.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
flake8-mypy = "^17.8.0"
locust = "^2.15.1"
hypothesis = "^6.81.1"
schemathesis = "^3.19.5"
bandit = "^1.7.5"
pact-python = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 88